--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="Blocks/Grass.js"></script>
     <script src="Blocks/Stone.js"></script>
     <script src="Blocks/Water.js"></script>
+    <script src="Blocks/Sand.js"></script>
   </head>
   <body>
     
